commit: logo removed, bkg color edited

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,7 +146,7 @@ input, select, textarea {
 		font-size: 1rem;
 		line-height: 1.65;
 	}
-
+		
 	a {
 		-moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
@@ -1158,7 +1158,8 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+			
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1271,16 +1272,7 @@ input, select, textarea {
 			margin-top: 3.5rem;
 		}
 
-			#header > *:before {
-				content: '';
-				display: block;
-				position: absolute;
-				top: calc(-3.5rem - 1px);
-				left: calc(50% - 1px);
-				width: 1px;
-				height: calc(3.5rem + 1px);
-				background: #ffffff;
-			}
+		
 
 		#header > :first-child {
 			margin-top: 0;
