--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,8 +141,8 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #ffffff;
-		font-family: "Source Sans Pro", sans-serif;
-		font-weight: 300;
+		font-family: "Rubik", sans-serif;
+		font-weight: 500;
 		font-size: 1rem;
 		line-height: 1.65;
 	}
@@ -193,7 +193,7 @@ input, select, textarea {
 			width: -moz-max-content;
 			width: -webkit-max-content;
 			width: -ms-max-content;
-			width: max-content;
+			width: calc(max-content + 20px);
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
 		}
@@ -1140,12 +1140,9 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto,
- 256px 256px;
-			background-position: center,
- center;
-			background-repeat: no-repeat,
- repeat;
+			background-size: auto, 256px 256px;
+			background-position: center,center;
+			background-repeat: no-repeat,repeat;
 			z-index: 2;
 		}
 
@@ -1237,13 +1234,28 @@ input, select, textarea {
 		}
 
 /* Header */
+		#header {
+  			display: flex;
+  			flex-direction: row;      /* only two children now */
+  			align-items: center;
+  			justify-content: center;  /* center both horizontally */
+  			gap: 100px;                /* space between image and text */
+  			padding: 20px;
+  			text-align: center;         /* text aligns left */
+			}
 
-	#header {
+		.header-right {
+  			
+  			flex-direction: column;   /* stack content + nav vertically */
+  			align-items: flex-start;  /* align everything left */
+			}
+
+	/*#header {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		-moz-flex-direction: column;
+		-moz-flex-direction: row;
 		-webkit-flex-direction: column;
 		-ms-flex-direction: column;
 		flex-direction: column;
@@ -1261,7 +1273,7 @@ input, select, textarea {
 		background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
 		max-width: 100%;
 		text-align: center;
-	}
+	}*/
 
 		#header > * {
 			-moz-transition: opacity 0.325s ease-in-out;
@@ -1272,7 +1284,14 @@ input, select, textarea {
 			margin-top: 3.5rem;
 		}
 
-		
+		.header-left .profile-img {
+    		border-radius: 30px;
+    		max-width: 450px;      /* control size */
+    		height: 650px;
+			mix-blend-mode: overlay; /* more aggressive blending */
+    		filter: brightness(0.9) contrast(1.2);
+    		box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+}
 
 		#header > :first-child {
 			margin-top: 0;
